# Hermes

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix  package.nix  result  run.json
packaging/: dk.sebsa.Hermes.yml  package_flatpak.py
scripts/: configure.py  generated.py  mode_debug.py  mode_release.py  run.py
src/: Hermes.cpp  Log.cpp  Log.h
src/Appearence/: Theme.cpp  Theme.h
src/Engine/: Engine.cpp  Engine.h  File.cpp  File.h  Linux.cpp  OS.cpp  OS.h
src/Models/: FileList.cpp  FileList.h
src/Views/: FileListView.qml  MainView.qml  NavigationBar.qml  Stroke.qml
